syntax = "proto3";

package bolt;

message Job {
  int64 ID = 1;
  int64 OwnerID = 2;
  string Type = 3;
  string Status = 4;
  int64 PlaylistID = 5;
  string URL = 6;
  string Error = 7;
  int64 CreatedAt = 8;
  int64 UpdatedAt = 9;
}

message Playlist {
  int64 ID = 1;
  string Name = 2;
  int64 CreatedAt = 3;
  int64 UpdatedAt = 44;
}

message Track {
  int64 ID = 1;
  int64 PlaylistID = 2;
  string FileID = 3;
  string Title = 4;
  int64 CreatedAt = 5;
  int64 UpdatedAt = 6;
}

message User {
  int64 ID = 1;
  string MobileNumber = 2;
  int64 CreatedAt = 3;
  int64 UpdatedAt = 4;
}